telecom-bretagne/javacompiler/SecondPhase/tests/Fail/TestClassModifiersFail.java
package main;

public final strictfp abstract class Main {

	public static void main(String argv[]){
		System.out.println("Hello World!");
	}
	
}
